feat: add initial groupvar support for inventory capture groups
